<resources>
    <string name="app_name">TemanTB</string>
    <string name="signup">Daftar</string>
    <string name="getOnTrack">Start</string>
    <string name="message_welcome_page">Keep in track with your therapy \n through TemanTB</string>
    <string name="title_welcome_page">TemanTB</string>
    <string name="subtitle_welcome_page">Support your recovery.</string>
    <string name="title_signup_page">Lengkapi data dirimu di bawah ini ya</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="message_login_page">Log in to your persistent account</string>
    <string name="title_login_page">Welcome back!</string>
    <string name="name">Name</string>
    <string name="message_main_page">Selamat Belajar di Dicoding.</string>
    <string name="greeting">Halo %1$s,</string>
    <string name="logout">Keluar</string>
    <string name="welcome_vector">Welcome Vector</string>
    <string name="message_have_account">Already have account? Login</string>
    <string name="sign_up">Sign Up</string>
    <string name="message_not_have_account">Don\'t have account? Register</string>
    <string name="title_register_page">Let\'s Get Started</string>
    <string name="message_register_page">Enter your detail to  proceed further.</string>
    <string name="phone">Phone Number</string>
    <string name="symptons">Symptons</string>
    <string name="sympton_desc">Write down all your symptons here</string>
    <string name="media">Media</string>
    <string name="camera">Camera</string>
    <string name="gallery">Gallery</string>
    <string name="select_date">Select Date</string>
    <string name="date">Date</string>
    <string name="date_reference">mm/dd/yyyy</string>
    <string name="save_media">Save</string>
    <string name="screning_page_title">Screening Infromation Detail</string>
    <string name="upload_page_title">Add Medicine Schedule</string>
    <string name="medicineName">Medicine Name</string>
    <string name="desc_reminder">Description</string>
    <string name="hour_reminder">Repeat Every</string>
    <string name="hint_hour">--:--  --</string>
    <string name="your_medicine">Enter your medicine name</string>
    <string name="medicine_description">Enter your medicine description</string>
    <string name="msg_error_password">Password must be at least 8 characters</string>
    <string name="upload">Upload</string>
    <string name="error_empty_image">Please insert the image first.</string>
    <string name="menu_logout_button">Log Out</string>
    <string name="login_successful_message">Login successful.</string>
    <string name="login_failed_message">Login failed</string>
    <string name="account_ready_message">Your account is ready. Lets login and share your story. </string>
    <string name="account_not_ready_message">There was an error, so the account cannot be created. Please try again.</string>
    <string name="msg_error_email">Invalid email format</string>
    <string name="retry">Retry</string>
    <string name="no_internet_connection">No Internet Connection</string>
    <string name="required">Required</string>
    <string name="permission_request_granted">Permission request granted</string>
    <string name="permission_request_denied">Permission request denied</string>
    <string name="confPassword">Confirmation Password</string>
    <string name="hour">Set Hour</string>
    <string name="no_schedule_available">No schedule available</string>
    <string name="medicine_name">Medicine name</string>
    <string name="time">Time</string>
    <string name="description">Description</string>
    <string name="reminder_header">Schedule</string>
    <string name="pref_notify_name">Daily reminder for nearest schedule of the day.</string>
    <string name="display_header">Display</string>
    <string name="pref_dark_title">Dark mode</string>
    <string name="pref_key_dark" translatable="false">key_dark_mode</string>
    <string name="pref_dark_auto" translatable="false">auto</string>
    <string name="pref_dark_on" translatable="false">on</string>
    <string name="pref_dark_off" translatable="false">off</string>
    <string name="pref_key_notify">key_notification</string>
    <string name="dark_mode_auto">Automatic</string>
    <string name="dark_mode_on">Dark mode</string>
    <string name="dark_mode_off">Light mode</string>
    <string name="delete_course">Delete Course</string>
    <string name="delete_alert">Delete this course?</string>
    <string name="no">No</string>
    <string name="yes">Yes</string>
    <string name="detail">Course Detail</string>
    <string name="delete_success_message">Course deleted successfully</string>
    <string name="pref_notify_summary">Daily reminder for nearest schedule of the day.</string>
    <string name="default_notification_channel_id" translatable="false">channel_id</string>
    <string name="article_name">Article Name</string>
    <string name="list">List</string>
    <string name="about">About Me</string>
    <string name="articles_name">Nama Makanan</string>
    <string name="health_monitor">Monitor</string>
    <string name="medicine_schedule">Schedule</string>
    <string name="no_health_available">There\'s no history of your health.</string>
    <string name="average">Average</string>
    <string name="please_enable_notifications_in_settings">Please enable notifications in settings.</string>
    <string name="keterangan_schedule">Fill in your medicine details here to receive reminders.</string>
    <string name="keterangan_monitor">Write down your symptoms for the analysis.</string>
    <string name="greeting_message">hello, %1$s</string>
    <string name="detail_condition">Detail Condition</string>
    <string name="we_have_analyzed_your_condition_below">We have analyzed your condition below.</string>
    <string name="update">Update</string>
    <string name="setYourAlarm">Set your medicine</string>
    <string name="setAlarm">Set Alarm</string>
    <string name="daily_update_symptons">Daily Update Symptons</string>
    <string name="features">Features</string>
    <string name="it_s_time_to_take_your_medicine_please_get_it_now">It\'s time to take your medicine. Please get it now</string>
    <string name="cannot_schedule_exact_alarms_on_this_device">Cannot schedule exact alarms on this device</string>
    <string name="medicine_alarm_set_up">Medicine alarm set up.</string>
    <string name="repeating_alarm_cancelled">Repeating alarm cancelled</string>
    <string name="please_input_your_symptoms_first">Please input your symptoms first.</string>
    <string name="yay">Yay!</string>
    <string name="ok">Ok</string>
    <string-array name="data_name">

        <item>Tahukah kalian Tahapan Pengobatan TBC?</item>









    </string-array>
</resources>