<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.heaven.temantb.features.view.medicineScheduleDetail.MedicineScheduleDetailActivity"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="20dp"
        tools:context=".ui.detail.DetailActivity">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawablePadding="10dp"
            android:layout_marginTop="16dp"
            android:text="@string/medicineName"
            app:drawableStartCompat="@drawable/custom_ic_medicine"

            />

        <TextView
            android:id="@+id/tv_medicine_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="34dp"
            android:textColor="@color/textPrimary"
            android:textSize="16sp"
            tools:text="@tools:sample/lorem"
            android:transitionName="trMedicineName"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:drawablePadding="10dp"
            android:text="@string/time"
            app:drawableStartCompat="@drawable/ic_time" />

        <TextView
            android:id="@+id/tv_time"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="34dp"
            android:textColor="@color/textPrimary"
            android:textSize="16sp"
            android:transitionName="trDescription"
            tools:text="@tools:sample/us_zipcodes" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:drawablePadding="10dp"
            android:text="@string/description"
            app:drawableStartCompat="@drawable/ic_note" />

        <TextView
            android:id="@+id/tv_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="34dp"
            android:textColor="@color/textPrimary"
            android:textSize="16sp"
            android:transitionName="trHour"
            tools:text="@tools:sample/lorem/random" />

        <ProgressBar
            android:id="@+id/progressBar"
            style="?android:attr/progressBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="invisible"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </LinearLayout>

</ScrollView>